# Performic

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/performic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BenchmarkCore.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/benchmarks/: BenchmarkCore.cpp
app/src/main/cpp/benchmarks/cpu_benchmark/: CpuBenchmark.cpp  CpuBenchmark.h
app/src/main/cpp/benchmarks/gpu_benchmark/: GpuBenchmark.cpp  GpuBenchmark.h
app/src/main/cpp/benchmarks/memoty_benchmark/: MemoryBenchmark.cpp  MemoryBenchmark.h
app/src/main/cpp/utils/: utils.h
app/src/main/java/com/example/performic/: BenchmarkManager.kt  BenchmarkResult.kt  MainActivity.kt
app/src/main/java/com/example/performic/record/: ThermalPoint.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/performic/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
